# BP_VODOLAN

./: .gitignore  README.md  agresivni_hrac.py  base.py  config.py  fixed_cisla.py  hot_cold_strategie.py  kontrolni_testy.py  loterie.py  main.py  martingale_strategie.py  mc_simulace.py  nahodna_strategie.py  opatrny_hrac.py  prng.py  provozovatel.py  pyproject.toml  real_lottery_reference.py  scenare.py  statistiky.py  tovarna_na_hrace.py  vizualizace.py
data/: real_lottery_reference.csv
